# CmakeProjectDemo

./: CMakeLists.txt  README.md
Model/: CMakeLists.txt
Model/Standard/: Model.cpp  Model.h  stdafx.h
Network/: CMakeLists.txt  resource.rc
Network/src/: Network.cpp  Network.h
PngReader/: CMakeLists.txt
PngReader/src/: PngReader.cpp
